--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ header::after {
     transform: translateX(-50%);
     width: 200px;
     height: 5px;
-    background: linear-gradient(to right, #7349E5, #8E6AFF);
+    background: linear-gradient(to right, #8E6AFF, #8E6AFF);
     border-radius: 5px;
     box-shadow: 0 0 25px rgba(115, 73, 229, 0.9);
 }
